2019-11-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix a mailbox-threading bug.

	When adding a new mailbox, we used the UI to set its threading
	type; unfortunately, the UI sets the threading on the currently
	shown mailbox instead. Spotted when the new local mailbox should
	have threading enabled, and the current mailbox is IMAP and
	does not support threading.

	* libbalsa/mailbox.c (libbalsa_mailbox_set_threading_type): call
	libbalsa_mailbox_set_threading() if the mailbox is non-NULL,
	instead of making the caller do it;
	* src/balsa-index.c (balsa_index_set_thread_messages): do not call
	libbalsa_mailbox_set_threading();
	* src/mailbox-conf.c: drop BalsaMailboxConfView:mailbox--no one
	is now using it;
	(mailbox_conf_view_new_full): no one is now using
	BalsaMailboxConfView:mailbox;
	(mailbox_conf_view_check): set the threading type directly on
	the mailbox, instead of using the UI;
	* src/main-window.c: drop balsa_window_set_thread_messages, as
	it is no longer needed;
	(bw_enable_mailbox_menus): include the guts of
	balsa_window_set_thread_messages in-line;
	* src/main-window.h: drop balsa_window_set_thread_messages.

2019-10-19  Pawel Salek  <pawsa0@gmail.com>

	* NEWS, configure.ac, meson.build: release balsa-2.5.9

2019-10-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	More efforts to get HTML parts to fill the pane

	* libbalsa/html.c (lbh_web_view_new): connect to "load-changed"
	signal;
	(lbh_load_changed_cb): call-back for it; if the load has
	finished, call gtk_widget_queue_resize();
	* src/balsa-message.c (add_part): pack the widget with
	expand=FALSE, so that an HTML part's v-expand takes precedence.

2019-10-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not use archaic 200px default height; now that we set
	GtkWidget:vexpand to TRUE, the natural height works better.

	* libbalsa/html.c: for cosmetics, define LBH_NATURAL_SIZE as -1;
	(lbh_web_view_new): use it for the height;
	(libbalsa_html_print_bitmap): ditto;